<resources>
    <string name="app_name">Games</string>
    <string name="login">Login</string>
    <string name="welcome">Welcome!</string>
    <string name="good_message">With our application will be much more easier and more fun to keep control of your games!</string>
    <string name="user_email">E-mail</string>
    <string name="user_password">Password</string>
    <string name="remember">Remember me</string>
    <string name="login_button">Login</string>
    <string name="create_account">Create account</string>
    <string name="developer">Developed by Eduardo Moreira</string>

    <string name="games">Games</string>
    <string name="new_account">New account</string>
    <string name="choose_photo">Let\'s choose a photo?</string>
    <string name="authentication_data">Authentication data</string>
    <string name="new_email">E-mail</string>
    <string name="new_password">Password</string>
    <string name="personal_data">Personal data</string>
    <string name="new_name">What\'s your name?</string>
    <string name="new_city">What\'s your city?</string>
    <string name="birth_date">Birth date</string>
    <string name="game_level">What\'s your game level?</string>
    <string name="level_status">Level</string>
    <string name="favorite_console">What\'s your favorite console?</string>
    <string name="new_gender">Gender</string>
    <string name="female">Female</string>
    <string name="masculine">Masculine</string>

    <string name="name">Name</string>
    <string name="email">name123@email.com</string>
    <string name="finished_games">Games Finished</string>
    <string name="finished_games_number">35</string>
    <string name="currently_games">Currently Playing</string>
    <string name="currently_games_number">06</string>
    <string name="age">Age</string>
    <string name="age_number">27</string>
    <string name="level">Level Number</string>
    <string name="registered_games">Your registered games</string>

    <string-array name="consoles">
        <item>PlayStation 5</item>
        <item>Xbox Series</item>
        <item>PlayStation 4</item>
        <item>Xbox One</item>
        <item>Nintendo Switch</item>
        <item>PlayStation 3</item>
        <item>Xbox 360</item>
        <item>Wii U</item>
        <item>Wii</item>
        <item>PlayStation 2</item>
        <item>Xbox</item>
        <item>Dreamcast</item>
        <item>PlayStation</item>
        <item>Nintendo 64</item>
    </string-array>
</resources>