<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:background="@drawable/ic_wave"
        android:gravity="center|end"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/text_view_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_bold"
            android:gravity="end"
            android:paddingEnd="16dp"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="36sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:background="@drawable/ic_wave__reverse_"
        android:gravity="bottom|center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="1dp">

        <TextView
            android:id="@+id/text_view_developer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_bold"
            android:gravity="center"
            android:text="@string/developer"
            android:textColor="@color/white"
            android:textSize="12sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/text_view_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/welcome"
        android:textColor="@color/strong_blue"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/frameLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/frameLayout2" />

    <TextView
        android:id="@+id/text_view_good_message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="30dp"
        android:fontFamily="@font/roboto"
        android:text="@string/good_message"
        android:textColor="@color/text_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_welcome" />

    <EditText
        android:id="@+id/edit_text_your_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/input_background"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="10dp"
        android:drawableTint="@color/medium_blue"
        android:ems="10"
        android:hint="@string/user_email"
        android:inputType="textEmailAddress"
        android:padding="15dp"
        android:textColor="@color/text_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_good_message" />

    <EditText
        android:id="@+id/edit_text_your_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/input_background"
        android:drawableStart="@drawable/ic_lock"
        android:drawablePadding="10dp"
        android:drawableTint="@color/medium_blue"
        android:ems="10"
        android:hint="@string/user_password"
        android:inputType="textPassword"
        android:padding="15dp"
        android:textColor="@color/text_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_your_email" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:buttonTint="@color/light_blue"
        android:text="@string/remember"
        android:textColor="@color/text_color"
        app:layout_constraintEnd_toEndOf="@+id/edit_text_your_password"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_your_password" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:backgroundTint="@color/strong_blue"
        android:padding="10dp"
        android:text="@string/login_button"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox" />

    <TextView
        android:id="@+id/text_view_create_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/create_account"
        android:textColor="@color/text_color"
        app:layout_constraintEnd_toEndOf="@+id/button_login"
        app:layout_constraintTop_toBottomOf="@+id/button_login" />

    <FrameLayout
        android:id="@+id/frameLayout2"
        android:layout_width="100dp"
        android:layout_height="1dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="70dp"
        android:background="@color/strong_blue"
        app:layout_constraintEnd_toStartOf="@+id/text_view_welcome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

    </FrameLayout>

    <FrameLayout
        android:layout_width="100dp"
        android:layout_height="1dp"
        android:layout_marginEnd="30dp"
        android:background="@color/strong_blue"
        app:layout_constraintBottom_toBottomOf="@+id/text_view_welcome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/text_view_welcome"
        app:layout_constraintTop_toTopOf="@+id/text_view_welcome">

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>